# currency-analyzer

./: .gitignore  README.md  pyproject.toml
example_reports/: changes.csv  changes.json  changes_usd.csv  changes_usd.json  raw.csv  raw.json  raw_usd.csv  raw_usd.json
src/currency_analyzer/: logger.py
src/currency_analyzer/api/: client.py  nbp.py
src/currency_analyzer/cli/: main.py
src/currency_analyzer/core/: database.py  exceptions.py  types.py
src/currency_analyzer/reporting/: analysis.py  export.py
tests/: test_analysis.py  test_database.py  test_exporter.py  test_pipeline.py
